BookingControllerTest Item ControllerTest fixed